[package]
name = "yield-tokenizer-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yield-tokenizer = { version "0.1.0", path = "../yield-tokenizer"}
anyhow = "1.0.81"
borsh = { version = "1.4.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["cargo", "derive"] }
serde = { version = "1.0.197", features = ["derive"] }
solana-cli-config = "1.18.10"
solana-client = "1.18.10"
solana-sdk = "1.18.10"
spl-token = "=4.0.0"
spl-associated-token-account = "3.0.2"

[[bin]]
name = "yt"
path = "src/main.rs"
